--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -649,7 +649,12 @@
         </div>
     </div>
 
+
+
+    <div class="filler" id ="borderBottom"></div>
     <div class="filler"></div>
+
+
 
     <div class ="featureProductsHeading" >
         shop by layout
@@ -692,6 +697,7 @@
         </div>
     </div>
 
+    <div class="filler" id ="borderBottom"></div>
     <div class="filler"></div>
 
     <div class ="featureProductsHeading" >
