--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -387,7 +387,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Raul_Movie_Fast.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption><a href="#shop"><button> explore the shop </button></a></figcaption>
+            <figcaption><a href="#borderBottom"><button> explore the shop </button></a></figcaption>
         </div>
     </div>
 
@@ -733,17 +733,10 @@
                 Monday - Friday: 7AM - 8PM
             </h1>
             <h1>
-                Phone: 1 (347) 974-7200
-            </h1>
-            <h1>
-                Address: 218 8th Avenue, New York, NY 10011, USA
-            </h1>
-            <h1>
                 Questions? please email us at raul@raulavilainc.com
             </h1>
-            <h1>
-                Social Media :
-            </h1>
+            <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"></a>
+
         </div>
 
     </footer>
