--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -79,20 +79,21 @@
         </div>
 
         <div class="centerIt">
-
-            <span class="psw" id ="accountCreate2"><a href="#">Already have an Account?</a></span>
+            <span class="psw"><a href="#">Forgot password?</a></span>
+            <span class="psw" id ="accountCreate2"><a href="#">Create an Account</a></span>
         </div>
     </form>
 </div>
 
-<div class = "headers" id = "headerOnScroll">
+<div class = "headers" id="headerOnScroll">
     <figure id="figureOnScroll">
+
         <div class="navbarIcons">
             <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
             <div class="hoverDiv2">
                 <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>raul@raulavilainc.com</span><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-432-5436</span>
+                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>email@email.com</span><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (900)-009-9090</span>
             </div>
         </div>
 
@@ -120,7 +121,7 @@
         <a href="{% url 'cart' %}" title="Shopping Cart"> <p> {{request.session.items_total}}  <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart" > </p></a>
 
         {% else %}
-        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
+        <a href="{% url 'Raul-SecondHome' %}"><p>  <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
         <div class="navbarIcons">
             <p title="Login or Register"><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
             <div class="hoverDiv" title="Login or Register">
@@ -128,15 +129,15 @@
                 <span><a href="#" onclick="document.getElementById('id02').style.display='block'">Register</a></span>
             </div>
         </div>
-        <a href="{% url 'cart' %}" title="Shopping Cart"> <p>{{request.session.items_total}}    <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
+        <a href="{% url 'cart' %}" title="Shopping Cart"> <p> {{request.session.items_total}}  <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
         {% endif %}
 
     </figure>
 
-    <div class="category" id="hideOnScroll">
+    <div class="category" id="hideOnScroll" style="padding-bottom:0">
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}" style="color:white">New Arrivals</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
                     <a>Colored Glass Collection</a>
@@ -151,7 +152,7 @@
             </div>
         </div>
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}" style="color:white">Decorative Accessories</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
                     <a href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
@@ -164,7 +165,7 @@
         </div>
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}" style="color:white">Tabletop</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
                     <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
@@ -175,24 +176,24 @@
         </div>
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
-            <div class="dropDownContent">
-                <div class="dropDownContentLinks">
-                    <a  href="{% url 'cat-view' 'Chairs' %}">Chairs</a>
-                    <a  href="{% url 'cat-view' 'End Tables' %}">End Tables</a>
-                    <a  href="{% url 'cat-view' 'Ottoman & Benches' %}">Ottoman & Benches</a>
-                    <a  href="{% url 'cat-view' 'Outdoor Furniture' %}">Outdoor Furniture</a>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Furniture' %}" style="color:white">Furniture</a></p>
+                <div class="dropDownContent">
+                    <div class="dropDownContentLinks">
+                        <a  href="{% url 'cat-view' 'Chairs' %}">Chairs</a>
+                        <a  href="{% url 'cat-view' 'End Tables' %}">End Tables</a>
+                        <a  href="{% url 'cat-view' 'Ottoman & Benches' %}">Ottoman & Benches</a>
+                        <a  href="{% url 'cat-view' 'Outdoor Furniture' %}">Outdoor Furniture</a>
+                    </div>
                 </div>
-            </div>
         </div>
 
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Floral' %}" style="color:white">Floral</a></p>
         </div>
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
+            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}" style="color:white">Wall Art</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
                     <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>
@@ -203,12 +204,12 @@
 
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'Raul-product' %}">All Products</a></p>
+            <p class="dropDownButton"><a  href="{% url 'Raul-product' %}" style="color:white">All Products</a></p>
         </div>
 
 
         <div class = "dropDownMenu">
-            <p class="dropDownButton" ><a  href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
+            <p class="dropDownButton" ><a  href="{% url 'sec-view' 'Sale' %}" style="color:white">Sale</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
                     <a  href="{% url 'cat-view' 'All Sale Items' %}">All Sale Items</a>
@@ -217,13 +218,10 @@
                     <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
                     <a href="{% url 'cat-view' 'Vases & Cachepots' %}">Vases and Cachepots</a>
                     <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
-                    <a>f</a>
                 </div>
             </div>
         </div>
-
-        <p class="dropDownButton"><a href="{% url 'venue' %}">Venue Bookings</a></p>
-
+        <a href="{% url 'venue'%} " ><p id="categoryP" style="color:white"> Venue Bookings</p></a>
 
     </div>
 </div>
@@ -234,8 +232,8 @@
     <nav>
         <div class ="mobile-actions">
             <a href="{% url 'login' %}" title="Shopping Cart" id = "mobile-shopping"><img src = "{% static 'Raul/Icons/Icons_Large/login.png' %}" alt="Login"></a>
-            <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
-            <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
+        <a href="{% url 'cart' %}" title="Shopping Cart" id = "mobile-shopping"><img src="{% static 'Raul/Icons/Icons_Large/cart.png' %}" alt="Cart"></a>
+        <a><img src = "{% static 'Raul/Images/hamburgerIcon.png' %}" class="menuBar" id="menuHam" onclick="openNav()" draggable="false"></a>
         </div>
         <ul id="contentHam">
 
@@ -251,8 +249,8 @@
                     <div id="mobile-dropdown" class="mobile-dropdownContent">
                         <a href="#home">Home</a>
                         <a href="#about">About</a>
-                        <a href="#Venue Book">Contact</a>
-                    </div>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -262,11 +260,10 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown2" class="mobile-dropdownContent">
-                        <a href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
-                        <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
-                        <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
-                        <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
-                    </div>
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -276,9 +273,10 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown3" class="mobile-dropdownContent">
-                        <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
-                        <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>
-                    </div>
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -288,11 +286,10 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown4" class="mobile-dropdownContent">
-                        <a  href="{% url 'cat-view' 'Chairs' %}">Chairs</a>
-                        <a  href="{% url 'cat-view' 'End Tables' %}">End Tables</a>
-                        <a  href="{% url 'cat-view' 'Ottoman & Benches' %}">Ottoman & Benches</a>
-                        <a  href="{% url 'cat-view' 'Outdoor Furniture' %}">Outdoor Furniture</a>
-                    </div>
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -309,9 +306,10 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown5" class="mobile-dropdownContent">
-                        <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>
-                        <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
-                    </div>
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -328,13 +326,10 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown6" class="mobile-dropdownContent">
-                        <a  href="{% url 'cat-view' 'All Sale Items' %}">All Sale Items</a>
-                        <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
-                        <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
-                        <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
-                        <a href="{% url 'cat-view' 'Vases & Cachepots' %}">Vases and Cachepots</a>
-                        <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
-                    </div>
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#contact">Contact</a>
+                      </div>
                 </div>
             </li>
             <li>
@@ -349,6 +344,7 @@
         </ul>
     </nav>
 </div>
+
 
 <div id ="store">
     <p onclick="closeStore()" id="cross">
@@ -368,7 +364,6 @@
     </p>
 
 </div>
-
 <div>
     {% if messages %}
     <div class="popUpMessage">
