--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -20,7 +20,7 @@
         <div class="bigContainer">
             <a href="{% url 'Raul_Inc_Home' %}">
                 <div class="container" id="cafeBanners">
-                    <p id ="raulAvila"><img src="{% static 'Raul/Images/raulAvilaIncFinal.png' %}" alt="logo" width="100%"></p>
+                    <p id ="raulAvila">RAUL AVILA INC</p>
                     <!-- <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic"> -->
                     <div class = "backgroundText3">
                         <figcaption>
@@ -33,7 +33,7 @@
         <div class ="bigContainer2">
             <a href="{% url 'Raul-SecondHome' %}">
                 <div class="container" id="raulBanner">
-                    <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
+                    <p id ="raul">RAUL</p>
                     <div class="backgroundText2">
                         <figcaption>
                             RAUL
@@ -43,7 +43,7 @@
             </a>
             <a href="#">
                 <div class="container" id="cafeBanner">
-                    <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
+                    <p id= "cafe">CAFE FLOR</p>
                     <div class="backgroundText">
                         <figcaption>
                             CAFE FLOR
