--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -33,8 +33,7 @@
 
 <body>
     <div class="sections" >
-        <div class="photo">
-        </div>
+    
         <div class="heroHeading">
             <div class="cafeLogo">
                 <img src= "{%static 'Raul_Inc/Images/cafe.png' %}">
@@ -55,7 +54,29 @@
             <h1>
                 Menu
             </h1>
-            <div class ="menuGrid">
+            <div class = "menuHeros">
+                <div class="menus">
+                    <div class="text">
+                        <h2><a href ="{%static 'Raul_Inc/Doc/Wine.pdf'%}" target="blank">Cafe Menu</a></h2>
+                    </div>
+                    <div class = "overlayImage">
+                        <img src="{%static 'Raul_Inc/Images/CafeMenu.jpg'%}">
+                     
+                    </div>
+                    
+                </div>
+                <div class = "menus">
+                    <div class ="text">
+                        <h2><a href ="{%static 'Raul_Inc/Doc/Wine.pdf'%}" target="blank">Wine Menu</a></h2>
+                    </div>
+                    <div class = "overlayImage">
+                        <img src="{%static 'Raul_Inc/Images/WineMenu.jpg'%}">
+                       
+                    </div>
+                    
+                </div>
+            </div>
+            <!-- <div class ="menuGrid">
                 <div class="menuSections">
                     <div class ="menuItems">
                         <p>____Organic Blend_____</p>
@@ -145,11 +166,12 @@
                         <p>Espresso Shot ...... 2.50</p>
                     </div>
                 </div>
-            </div>           
+            </div>            -->
         </div>
+    </div>
 
 
-        <div class="menuHead">
+        <!-- <div class="menuHead">
             <h1>
                 Wine Menu
             </h1>
@@ -229,7 +251,8 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
+    
     <div class="sections1" id = "parallax">
     </div>
     <footer>
