--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -380,10 +380,23 @@
 
 
 <div class="containers">
-        <div class = "containers1">
-            {% block content %}{% endblock %}
-        </div>
+    <div class = "containers1">
+        {% block content %}{% endblock %}
     </div>
+</div>
+<footer>
+    <div class = "hoursOfOperation">
+        <h1>
+            Monday - Friday: 7AM - 8PM
+        </h1>
+        <h1>
+            Questions? please email us at raul@raulavilainc.com
+        </h1>
+        <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"></a>
+
+    </div>
+
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
