--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -11,7 +11,7 @@ body{
     padding:0;
     overflow-x: hidden;
     width:100%;
-    background-color: #fefefa;
+    background-color: #d4d4d3;
     scroll-behavior: smooth;
 }
 
@@ -35,6 +35,7 @@ a{
 h1{
     font-family: myFirstFont;
     font-size: 80px;
+    text-align: center;
 }
 
 #parallax{
@@ -46,24 +47,88 @@ h1{
 
 .sections{
     display:grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 100%;
     place-content: center;
     place-items: center;
     scroll-behavior: smooth;
-}
-
-.photo{
     background: url('Images/cafe4.jpg');
     width:100%;
     height:100vh;
     background-size: cover;
     background-position: bottom center;
+    background-attachment: fixed;
 }
+
 
 .heroHeading{
     width:100%;
     height:100vh;
     position: relative;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.menuHeros{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding:50px;
+}
+
+.menus{
+    width:90%;
+    margin:0 10px;
+    position: relative;
+    height:500px;
+    overflow:hidden;
+    
+}
+
+.overlayImage {
+    position: absolute;
+    top:0;
+    left:0;
+    overflow: hidden;
+    width:100%;
+    height: auto;
+    transition: 0.4s ease-in-out;
+}
+
+.overlayImage img{
+    width: 100%;
+}
+
+.overlayImage:hover{
+    cursor: pointer;
+}
+
+.text h2:hover{
+    background-color: black;
+    cursor: pointer;
+}
+
+.text:hover ~.overlayImage{
+    filter: brightness(60%);
+}
+
+.text{
+    position: absolute;
+    bottom:40%;
+    left:20%;
+    margin:0 auto;
+    z-index: 1;
+}
+
+.text h2{
+    padding:16px 32px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 45px;
+    color:white;
+    font-family: myFirstFont;
+    margin:0 auto;
+    transition: 0.4s ease-in-out;
+}
+
+.text h2 a{
+    color:white;
 }
 
 .cafeLogo{
@@ -121,7 +186,6 @@ h1{
 
 .menu{
     width:100%;
-    padding: 80px 0;
     scroll-behavior: smooth;
 }
 
@@ -151,7 +215,8 @@ h1{
 }
 
 .menuHead{
-    padding:80px 80px 20px 80px;
+    padding:0px 80px 0px 80px;
+    margin:80px 0;
 }
 
 .hoursOfOperation{
