--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -35,7 +35,7 @@
         <div class ="bigContainer2">
             <a href="{% url 'Raul-SecondHome' %}">
                 <div class="container" id="raulBanner">
-                    <p id ="raul">RAUL</p>
+                    <p id ="raul"> raùl</p>
                     <div class="backgroundText2">
                         <figcaption>
                             RAUL
@@ -43,9 +43,9 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'Raul_Inc_cafe' %}">
                 <div class="container" id="cafeBanner">
-                    <p id= "cafe">CAFE FLOR</p>
+                    <p id= "cafe">café-flor</p>
                     <div class="backgroundText">
                         <figcaption>
                             CAFE FLOR
