--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -51,7 +51,7 @@ h1{
     place-content: center;
     place-items: center;
     scroll-behavior: smooth;
-    background: url('Images/cafe4.jpg');
+    background-image: url('Images/RaulRetail_Feb13th2020__3176.jpg');
     width:100%;
     height:100vh;
     background-size: cover;
