--- a/Raul_Inc/templates/Raul_Inc/press-coveteur.html
+++ b/Raul_Inc/templates/Raul_Inc/press-coveteur.html
@@ -22,7 +22,7 @@
         <li><a href="{%url 'Raul_Inc_Bio' %}">BIO</a></li>
         <li><a href="{%url 'Raul_Inc_Press' %}">PRESS</a></li>
         <li><a href="{%url 'Raul_Inc_clientList' %}">CLIENT LIST</a></li>
-        <li><a href="client/gallery.html">GALLERY</a></li>
+        <li><a href="{%url 'Raul_Inc_gallery' %}">GALLERY</a></li>
         <li><a href="{%url 'Raul_Inc_contact' %}">CONTACT</a></li>
         <li>
             <div id="social">
